fixed skype button

--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -46,7 +46,7 @@
 
 <p>Make sure that you have skype installed in your PC / MAC or smartphone. To download skype: <a href="https://www.skype.com/ja/get-skype/" target="_blank" style="color:red;">Click Here</a></p>
 
-<a href="skype://<%= @user.skype %>" class="btn btn-lg btn-danger" style="color:#fff;"><i class="fa fa-skype"></i> Skype Call Now</a>
+<a href="skype://<%= @user.skype %>?call" class="btn btn-lg btn-danger" style="color:#fff;"><i class="fa fa-skype"></i> Skype Call Now</a>
 
 <h4>Teacher's Skype ID: <%= @user.skype %></h4>
 
