changed english to japanese text for student end. fixed unable to open when available and on mobile

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,7 @@
 		<!--student-->
 		<!--student-->
 		<div class="container" style="padding:0 3% 0 3%;">
-			<h2 style=" font-family: 'Work Sans', sans-serif;" class="text-center" >Teachers <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">『今』空いてる先生</span></h2>
+			<h2 style=" font-family: 'Work Sans', sans-serif;" class="text-center">Teachers <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">『今』空いてる先生</span></h2>
 		<!--<h4 style="font-size:15px;">Let's buy teacher's TIME !!</h4>-->
 		        <div class="content">
 						<div class="grid" style=" text-align: center;
@@ -25,7 +25,7 @@
 							
 				<figure class="effect-jazz jazz2">
 							<img src="<%= user.picture %>" style="padding: 5px; background: -moz-radial-gradient(50% 50%, #fff, #fff);background: -webkit-radial-gradient(50% 50%, #fff, #fff); background: -o-radial-gradient(50% 50%, #fff, #fff); background: -ms-radial-gradient(50% 50%, #fff, #fff); background: radial-gradient(50% 50%, #fff, #fff)" />
-						<figcaption class="hidden-xs">
+						<figcaption>
 							<h2 style="font-size:17px;">Teacher <%= user.nick %></h2>
 							<p style="font-size:8px;"><span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">趣味：</span><%= user.hobby %></p>
 							<p style="font-size:8px;"><span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">スキル：</span><%= user.skill %></p>
@@ -46,7 +46,7 @@
 										
 					<figure class="effect-jazz jazz1">
 			<img src="<%= user.picture %>" style="padding: 5px; background: -moz-radial-gradient(50% 50%, #fff, #fff);background: -webkit-radial-gradient(50% 50%, #fff, #fff); background: -o-radial-gradient(50% 50%, #fff, #fff); background: -ms-radial-gradient(50% 50%, #fff, #fff); background: radial-gradient(50% 50%, #fff, #fff)" />
-						<figcaption class="hidden-xs">
+						<figcaption>
 							<h2 style="font-size:17px;">Teacher <%= user.nick %></h2>
 							<p style="font-size:8px;"><span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">趣味：</span><%= user.hobby %></p>
 							<p style="font-size:8px;"><span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">スキル：</span><%= user.skill %></p>
