--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -42,14 +42,14 @@
 
 <div class="col-md-6">
 
-<p>Make sure that you have skype installed in your PC / MAC or smartphone. To download skype: <a href="https://www.skype.com/ja/get-skype/" target="_blank" style="color:red;">Click Here</a></p>
+<p>オンライン英会話を受講するためにはスカイプのダウンロードが必須です。<a href="https://www.skype.com/ja/get-skype/" target="_blank" style="color:red;">ダウンロードはこちら</a></p>
 
-<a href="skype:<%= @user.skype %>?call" class="btn btn-lg btn-danger" style="color:#fff;"><i class="fa fa-skype"></i> Skype Call Now</a>
+<a href="skype:<%= @user.skype %>?call" class="btn btn-lg btn-danger" style="color:#fff;"><i class="fa fa-skype"></i> S今すぐ通話</a>
 
-<h4>Teacher's Skype ID: <%= @user.skype %></h4>
+<h4>先生のスカイプID: <%= @user.skype %></h4>
 
-<p>Teacher is not answering the call?</p>
-<button onclick="return confirm('Are you sure you want to report the Teacher?')">Click Here</button><span> to report</span>
+<p>先生が通話に応答しない場合は？</p>
+<button onclick="return confirm('Are you sure you want to report the Teacher?')">こちらから報告ください</button>
 
 <div class="col-md-offset-3 col-md-6 col-xs-12">
 <a type="button" class="btn" style="color: #000; width: 100%; margin-top: 30px;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
