--- a/app/views/curriculums/daily_english.html.erb
+++ b/app/views/curriculums/daily_english.html.erb
@@ -26,8 +26,11 @@ linkslinkslinks -->
         <div class="panel panel-info">
           <div class="panel-heading"><h3 class="hidden-xs">Daily English<span class="pull-right glyphicon glyphicon-comment"></span></h3></div>
           <div class="panel-body">
-            <br><p>Hailing A Taxi<button type="button" class="btn btn-info pull-right" data-toggle="collapse" data-target="#daily1">Show contents</button></p>
-            <div id="#daily1" class="collapse"><br>
+
+            <br><p>Hailing a taxi   <button type="button" class="btn btn-info pull-right" data-toggle="collapse" data-target="#de1">Show contents</button></p>
+            <div id="de1" class="collapse">
+
+              <br>
               <img src="https://lh4.googleusercontent.com/VlxoF6xNCY1CHQciQaVPJVnJ01qOn5pXdSw9XxfMnSMJo9jThIPxv5lQYTM3iIVLRtqnnkXB4vXWzNuVFrOkEKWvUyjaVH0KdSWO7sVKUaO8dEmRIrAmMdGcyt_Emqwgs4gjd6NL" width="50%" alt="Error Loading Img"><br><br>
 
               <strong>WARM UP:</strong><br>
@@ -94,7 +97,7 @@ linkslinkslinks -->
             <!-- close close -->
             <!-- close close -->
             <br>
-            <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#daily1">Close</button><br>
+            <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#de1">Close</button><br>
             <hr>
          </div>
 
