--- a/app/views/curriculums/it_english.html.erb
+++ b/app/views/curriculums/it_english.html.erb
@@ -27,7 +27,7 @@ linkslinkslinks -->
           <div class="panel-heading"><h3 class="hidden-xs">IT English<span class="pull-right glyphicon glyphicon-blackboard"></span></h3></div>
           <div class="panel-body">
             <br><p>Job Interview   <button type="button" class="btn btn-info pull-right" data-toggle="collapse" data-target="#it1">Show contents</button></p>
-            <div id="#it1" class="collapse">
+            <div id="it1" class="collapse">
 
              <br>
             <hr>
