add alerts panel

--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -91,10 +91,22 @@
         <!-- <label><%= @totalsafes.sum(:time) %></label> mins -->
       </div>
     </div>
-  </div>
+
+
+   <div class="panel panel-default">
+
+      <div class="panel-heading">
+        <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-bell"></span>Alerts</h2>
+      </div>
+      <div class="panel-body">
+      <div class="radio" style="margin-bottom: 10px;">
+
+        </div>
+      </div>
+    </div>
 
 </div>
-
+  </div>
 
 
 <!-- original dashboard -->
