updated incentive message

--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -38,7 +38,7 @@
         <p><strong>Time Out: </strong><%= t.time_out.strftime("%I:%M%p") %></p>
         <% end %>
         <% if Time.now.hour >= 19 %>
-        <p style="color:red; !important;"><small>Incentive Time. Make sure Login time is 6PM to earn incentive.</small></p>
+        <p style="color:red; !important;"><small>Incentive Time. Make sure Login time is 6PM onwards to earn incentive.</small></p>
         <% end %>
       </div>
 
