changed the circle in end enter page

--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -35,7 +35,7 @@
 
 <div class="col-md-6">
 
-<img src="<%= @user.picture %>" class="img-responsive img-circle img-thumbnail" style="width:80%;">
+<img src="<%= @user.picture %>" class="img-responsive img-thumbnail" style="width:80%;">
 <h2>Teacher <%= @user.nick %></h2>
 
 </div>
