--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -52,7 +52,9 @@
 <h4>先生のスカイプID: <%= @user.skype %></h4>
 
 <p>先生が通話に応答しない場合は？</p>
+<%= link_to report_teacher_path(@user) do %>
 <button onclick="return confirm('Are you sure you want to report the Teacher?')">こちらから報告ください</button>
+<% end %>
 
 <div class="col-md-offset-3 col-md-6 col-xs-12">
 <a type="button" class="btn" style="color: #000; width: 100%; margin-top: 30px;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
@@ -62,5 +64,17 @@
 </div>
 
 </div>
+
+<script>
+<!--
+if (window.name != "xsyz")
+{
+// document.write("読み込み中です。しばらくお待ちください。")
+setTimeout("location.reload()",3000);
+window.name = "xsyz";
+}
+
+//-->
+</script>
 
 <div style="clear: both; height:100px;"> </div>
