added instagram referral and removed skype from signup for students

--- a/app/views/safes/edit.html.erb
+++ b/app/views/safes/edit.html.erb
@@ -35,7 +35,7 @@
       		<div class="form-group">
 
               <label for="safe_time">Duration of call<span style="color:red; font-weight: bold;">*</span></label><br>
-                <%= f.text_field :time , :placeholder => 'Should be in mins, example 1 hour and 15 mins ~ 75', class: 'form-control col-md-4' %>
+                <%= f.text_field :time , :placeholder => 'Should be in mins, example 1 hour and 15 mins ~ 75', :required => '', class: 'form-control col-md-4' %>
             </div>
       		</div>
       	</div>
