added some curriculum article

--- a/app/views/curriculums/daily_english.html.erb
+++ b/app/views/curriculums/daily_english.html.erb
@@ -63,7 +63,7 @@ linkslinkslinks -->
               <strong>Asking where to find a taxi</strong><br>
               <img src="https://lh6.googleusercontent.com/RFpvey3cahgAZ34BirnmxCHQvFKbhS5tmc8EZmpWjsIoaTtha7zF-JC-nxX2G7jFyLT6cY5xOaewLU7-odhn1HrKrODvqhxjKokfnn33Bp1-OSLbtVRQIirFyjEykoRxRttGHdIS" width="50%" alt="Error Loading Img"><br><br>
 
-              <strong>Akiko: </strong>Hello Miss! Where can I find a cab? I would like to go to Kredo Hotel and Resort.  <br>
+              <strong>Akiko: </strong>Hello Miss! Where can I find a cab? I would like to go to Parky Hotel and Resort.  <br>
               <strong>Woman: </strong>You go straight on that road you can see a big acacia tree. There is a green waiting shed. It’s a cab stop. <br>
               <strong>Akiko: </strong>I don’t understand. Could you please repeat that? <br>
               <strong>Woman: </strong>(smiling) On that road you can see a big tree and a green waiting shed. Just wait for a cab there. (actioning) <br>
@@ -74,8 +74,8 @@ linkslinkslinks -->
               <strong>In the taxi cab</strong> <br>
               <img src="https://lh6.googleusercontent.com/ahQW3Y6jSr1A-eYsuG9UNFb65JT8upaLBbbpf8h80PKCX5YAYMw5TmbObokREBCdXwrxpkA5KoUqQJVzPxoBYD3Hfj6ImjX_kp3PzmJ1lN_hVtjcPH2nKKyZr-bSOi1Zd2Db2n9c" width="50%" alt="Error Loading Img"> <br><br>
 
-              <strong>Akiko: </strong>(Before getting in the cab) Could you take me to Kredo Hotel and Resort? How much will that cost? Do you use a meter? <br>
-              <strong>Driver: </strong>Yes madame, I can take you to Kredo Hotel and Resort and yes we will use the meter so the cost will depend on how far is our destination. <br>
+              <strong>Akiko: </strong>(Before getting in the cab) Could you take me to Parky Hotel and Resort? How much will that cost? Do you use a meter? <br>
+              <strong>Driver: </strong>Yes madame, I can take you to Parky Hotel and Resort and yes we will use the meter so the cost will depend on how far is our destination. <br>
               <strong>Akiko: </strong>(Getting in the cab) Ok thank you. Can we drive past Magellan Cross on the way? <br>
               <strong>Driver: </strong>Yes madame, no problem. <br>
               <em>Arriving at the hotel...</em><br>
@@ -83,6 +83,10 @@ linkslinkslinks -->
               <strong>Driver: </strong>Just P157.50 madame. <br>
               <strong>Akiko: </strong>Here you are. That is P200 just keep the change. Thanks for the ride and enjoy your day! <br>
               <strong>Driver: </strong>Thank you madame! Likewise, enjoy your stay! <br><br>
+
+
+
+
 
 
 
