added student history

--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -175,11 +175,6 @@
 
  -->
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
 <div class="container">
  <div class="row">
   <div class="col-md-12">
@@ -199,10 +194,10 @@
       <tbody>
 
   <% @safes.each do |safe| %>
-
+          <% @student_name_h = safe.student %>
           <td><%= safe.id %></td>
           <td><%= (safe.created_at).strftime("%I:%M%p") + ' ~ ' + time_ago_in_words(safe.created_at) %></td>
-          <td><%= safe.student %><button class="btn btn-success" data-toggle="modal" data-target="#history">Student History</button></td>
+          <td><%= safe.student %><%= link_to student_class_path(safe.student), :target => '_blank' do %> <button class="btn btn-warning">Student History</button> <% end %></td>
           <% @p = "\"" + safe.student + "\"" %>
           <% @id = User.find_by(name: safe.student) %>
           <td>
@@ -257,53 +252,6 @@
   <% end %>
   </tbody>
 </table>
-
-<!-- Modal -->
-
-
-  <!-- Modal -->
-  <div class="modal fade" id="history" role="dialog">
-    <div class="modal-dialog modal-lg">
-    
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="panel-heading modal-header">
-          <h4 class="modal-title">Student History</h4>
-        </div>
-        <div class="modal-body">
-          <table class="table table-compact table-hover table-bordered">
-            <tr>
-              <th>Teacher Name</th>
-              <th>Topic</th>
-              <th>Notes</th>
-              <th>Date</th>
-          </tr>
-
-        <%# @student_history.each do |safe| %>
-
-            <tr>
-              <td><%#= safe.teacher %></td>
-              <td><%#= safe.topic %></td>
-              <td><%#= safe.remarks %></td>
-              <td><%#= safe.created_at %></td>
-            </tr>
-          <%# end %>
-          </table>
-        </div>
-
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-      
-    </div>
-  </div>
-  
-
-
-
-<!-- Modal -->
-
 
 </div>
 </div>
