added popup instructions and small optimization

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,7 @@
 <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Work+Sans:200" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="https://tympanus.net/Development/HoverEffectIdeas/fonts/font-awesome-4.2.0/css/font-awesome.min.css" />
 
-<script src="jquery.min.js" type="text/javascript"></script>
-<script src="mosaic.1.0.1.js" type="text/javascript"></script>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 
 $(document).ready(function($){
 $('.fade').mosaic();
@@ -50,7 +48,7 @@ hover_x:'400px',
 hover_y:'300px'
 });
 });
-</script>
+</script> -->
 
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
