--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -41,7 +41,7 @@
 </div>
 
 <div class="col-md-6">
-<p>If you're not ready to call. You can Chat / Message Teacher <%= @user.nick %> first.</p>
+<p>まだ通話の準備ができていなければ、チャットでTeacher <%= @user.nick %>に連絡してみましょう </p>
 <span class="skype-button rounded" data-contact-id="<%= @user.skype %>" data-text="Chat Me" style="color: #fff;"></span>
 <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
 
