--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -209,6 +209,11 @@ span.input-group-addon i {
             </div>
             
           </form>
+
+          <div class="col-md-12">
+            <p style="color:red; text-align: center;">30 minutes free time will automatically add to your time after you sign up.</p>
+          </div>
+
         </div>
 
         <div class="modal fade" id="agreement" role="dialog">
