pop up edited. from english to japanese

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -118,22 +118,22 @@
 
       <div class="modal-content">
         <div class="modal-header">
-          <h3 class="modal-title text-center">Welcome to Timee!</h3>
+          <h3 class="modal-title text-center">timeeへようこそ！</h3>
         </div>
         <div class="modal-body">
-          <h4 class="text-center">Thank you for signing up!</h4><p>① You have been credited with free 30 minutes of time. To check how much time remains in your account you can click the time at the top of the page. </p><br>
+          <h4 class="text-center">ご登録ありがとうございます。</h4><p>① タイミーは時間を購入した分だけレッスンが受けれる英会話サービスです。現在キャンペーン中により初回登録は30分無料でご利用頂けます。アカウントに残っている時間を確認するには、ページ上部の残時間をクリックし確認出来ます。 </p><br>
 
           	<img src="../../time_status.jpg" class="img img-responsive">
 
           	<br>
-          	<p>② To start the class, just choose a teacher who is online.</p>
+          	<p>② レッスンは好きなタイミングで好きな講師を選択して受講可能です。もちろん面倒な予約は不要です。ライトアップされている講師は待機中ですぐにレッスン可能です。"sorry busy"と表示されている講師は離席中の為、受講出来ません。</p>
           	<br>
           	<img src="../../online_teacher.jpg" class="img img-responsive">
           	<br>
-          	<p>③ Choose a Topic and click the Submit button</p>
+          	<p>③ どの様なレッスンを受けたいか選択し、”今すぐ英会話を選択”します。</p>
           	<img src="../../choose_topic.jpg" class="img img-responsive">
           	<br>
-          	<p>④ You can now, chat or call the teacher and start the class</p>
+          	<p>④ 準備が出来てない場合はチャットで連絡、準備が出来たら今すぐ通話。あとは、講師の人たちが皆さんをサポートします。</p>
           	<br>
           	<img src="../../start_class.jpg" class="img img-responsive">
         </div>
