--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -211,7 +211,7 @@ span.input-group-addon i {
           </form>
 
           <div class="col-md-12">
-            <p style="color:red; text-align: center;">30 minutes free time will automatically add to your time after you sign up.</p>
+            <p style="text-align: center;">30分の無料トライアルは 登録後に自動的に付与されます。</p>
           </div>
 
         </div>
